--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,24 +1,25 @@
 {
   "functions": {
     "src/server.ts": {
-      "runtime": "nodejs16.x" 
+      "use": "@vercel/node@2.0.0",  
+      "memory": 512,
+      "maxDuration": 10
     }
   },
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/src/server.ts" 
+      "dest": "/src/server.ts"
     }
   ],
   "env": {
-    "PORT": "3000", 
-    "CORS_ORIGIN": "https://code-bridge-gamma.vercel.app" 
+    "PORT": "3000",
+    "CORS_ORIGIN": "https://code-bridge-gamma.vercel.app"
   },
   "builds": [
     {
       "src": "src/server.ts",
-      "use": "@vercel/node" 
+      "use": "@vercel/node@2.0.0"  
     }
-  ],
-  "outputDirectory": "dist" 
+  ]
 }
